# woxel-rs

./: .gitignore  LICENSE
assets/prototypes/: materials.yaml
crates/material-core/: Cargo.toml
crates/material-core/src/: lib.rs
crates/material-derive/: Cargo.toml
crates/material-derive/src/: lib.rs
crates/voxel/: Cargo.toml
crates/voxel/src/: lib.rs
crates/woxel-rs/: Cargo.toml  build.rs
crates/woxel-rs/src/: lib.rs  materials.rs
