[package]
name = "material-derive"
version = "0.1.0"
edition = "2021"

[lib]
name = "material_derive"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
syn = { version = "2", default-features = false, features = ["full", "parsing", "extra-traits"] }
proc-macro2 = "*"
material-core = {path = "../material-core"}
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
litrs = "*"
prettyplease = "*"
