[package]
name = "woxel-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
material-core = {path = "../material-core"}
material-derive = {path = "../material-derive"}

[build-dependencies]
material-core = {path = "../material-core"}
material-derive = {path = "../material-derive"}